; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_ed.inputl.c_Repair.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_ed.inputl.c_Repair.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NeedsRedraw = common dso_local global i64 0, align 8
@Argument = common dso_local global i32 0, align 4
@DoingArg = common dso_local global i64 0, align 8
@curchoice = common dso_local global i32 0, align 4
@LastChar = common dso_local global i64 0, align 8
@InputBuf = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @Repair to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Repair() #0 {
  %1 = load i64, i64* @NeedsRedraw, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = call i32 (...) @ClearLines()
  %5 = call i32 (...) @ClearDisp()
  store i64 0, i64* @NeedsRedraw, align 8
  br label %6

6:                                                ; preds = %3, %0
  %7 = call i32 (...) @Refresh()
  store i32 1, i32* @Argument, align 4
  store i64 0, i64* @DoingArg, align 8
  store i32 -1, i32* @curchoice, align 4
  %8 = load i64, i64* @LastChar, align 8
  %9 = load i64, i64* @InputBuf, align 8
  %10 = sub nsw i64 %8, %9
  %11 = trunc i64 %10 to i32
  ret i32 %11
}

declare dso_local i32 @ClearLines(...) #1

declare dso_local i32 @ClearDisp(...) #1

declare dso_local i32 @Refresh(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
